# celery-learning

./: celery_tasks.py  pyproject.toml  server.py
templates/: base.html  upload.html
